--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^4.0.0",
     "browser-image-compression": "^2.0.2",
-    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.3.1",
     "html2canvas": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.5",
-    "zod": "^3.24.1"
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
