--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^4.0.0",
+    "axios": "^1.7.9",
     "browser-image-compression": "^2.0.2",
-    "framer-motion": "^12.3.1",
     "html2canvas": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
